# PasteAsFile

./: .gitignore  BUILDING.md  README.md  clip2file_tray.py  pyproject.toml  requirements.txt  run.py  script.py  spinner.py
src/pasteasfile/: clip2file_tray.py  spinner.py  utils.py
